syntax = "proto3";

package user;

service UserService {
  rpc Register(RegisterRequest) returns (Response) {}
  rpc Login(LoginRequest) returns (Response) {}
  rpc GetInfo(GetInfoRequest) returns (UserInfoResponse) {}
  rpc GetProfile(GetRequest) returns (UserProfile) {}
  rpc List(ListRequest) returns (ListResponse) {}
}

message GetRequest {
  uint32 id = 1;
}

message GetInfoRequest {
  repeated uint32 ids = 1;
}

message RegisterRequest {
  string email = 1;
  string name = 2;
}

message LoginRequest {
  string email = 1;
  string auth_token = 2;
}

message UserInfo {
  uint32 id = 1;
  string nick = 2;
  string name = 3;
  string avatar_url = 4;
}

message UserInfoResponse {
  repeated UserInfo list = 1;
}

message UserProfile {
  uint32 id = 1;
  string nick = 2;
  string name = 3;
  string avatar_url = 4;
  string intro = 5;
  string email = 6;
}

message GetResponse {
  User user = 1;
}

message ListRequest {
  uint32 lastid = 1;
  uint32 offset = 2;
  uint32 limit = 3;
  uint32 group = 4;
  uint32 uid = 5;
}

message ListResponse {
  uint32 count = 1;
  repeated User list = 2;
}

message Response {}

message User {
  uint32 id = 1;
  string avatar = 2;
}